@@ -20,6 +20,7 @@
 // Standard includes
 #include <ostream>
 #include <exception>
+#include <optional>
 
 namespace bardcore
 {
