@@ -52,11 +52,12 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
-    <ClCompile Include="BardCore\dimension3_test.cpp" />
-    <ClCompile Include="BardCore\Imaginary\quaternion_test.cpp" />
-    <ClCompile Include="BardCore\math_test.cpp" />
-    <ClCompile Include="BardCore\point3d_test.cpp" />
-    <ClCompile Include="BardCore\vector3d_test.cpp" />
+    <ClCompile Include="BardCore\math\dimension3_test.cpp"/>
+    <ClCompile Include="BardCore\math\imaginary\quaternion_test.cpp"/>
+    <ClCompile Include="BardCore\math\math_test.cpp"/>
+    <ClCompile Include="BardCore\math\point3d_test.cpp"/>
+    <ClCompile Include="BardCore\math\vector3d_test.cpp"/>
+    <ClCompile Include="BardCore\utility\ray_test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
