@@ -1,2 +1,5 @@
-﻿documentation
-07/12/2023
+﻿added ray + tests
+10/12/2023
+
+added angle degrees/radians/dot product + tests
+10/12/2023
